# game-recorder

./: .gitattributes  .gitignore  README.md  game_capture_research.md  install.bat  overlay_all_recording_inputs.bat  overlay_latest_recording_inputs.bat  overlay_sample_recording_inputs.bat  pyproject.toml  run-console.bat  upload_recordings.bat  录制操作手册.md  录制操作手册.txt
.rdr2_camera/: active_session.json
baiducloud/: .gitignore  README.md  analyze_game_data.py  keys.example.txt  list_files.py
cp2077-camera/: README.md  install.bat  uninstall.bat
gta-camera/: build.bat  install.bat  使用方式.txt
modelscope-sample/: .gitignore  README.txt  build_bundle.bat  cleanup.bat  cleanup_short_sessions.py  install.bat  sample.bat  sample_recordings.py  使用方式.txt
modelscope-upload/: README.txt  build_bundle.bat  check_requirements.py  install.bat  requirements.txt  upload.bat  upload_recordings.py  使用方式.txt
rdr2-camera/: README.md  build.bat  install.bat  rdr2_camera.config.json  使用方式.txt
scripts/: batch_overlay_inputs.py  build_offline_bundle.bat  collect_recording_videos.py  install_cp2077_camera.py  install_gta_camera.py  install_rdr2_camera.py  install_wukong_camera.py  launch_background.vbs  merge_gta_camera.py  overlay_inputs_on_video.py  progress_utils.py  run.bat  smoke_auto_move.py  uninstall_wukong_camera.py  upload_recordings.py
tests/: test_auto_move.py  test_camera_sync.py  test_cp2077_camera_logger.py  test_cp2077_depth.py  test_cp2077_installer.py  test_gta_camera_logger.py  test_gta_installer.py  test_h264_encoder_select.py  test_process_guard.py  (+3 more)
(+49 files in other folders)
