[project]
name = "game-recorder"
version = "0.1.0"
description = "Game data capture system for world model training: synchronized video + audio + keyboard/mouse input"
requires-python = ">=3.10"
dependencies = [
    "dxcam>=0.3.0",
    "numpy>=1.24",
    "opencv-python-headless>=4.8",
    "soundcard>=0.4.2",
]

[project.scripts]
game-recorder = "game_recorder.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/game_recorder"]
